Add employee with upload
